--- a/JavaScript/QuadTree/examples/retrieve_inbounds.html
+++ b/JavaScript/QuadTree/examples/retrieve_inbounds.html
@@ -52,6 +52,10 @@
 		<canvas height="500" width="500" id="canvas"></canvas>
 		<div id="copyContainer">
 			Click and drag to hightlight all in a selected area.
+		<div>
+			<input type="radio" id="pointMode" name="mode" checked onclick="init();" /><label for="pointMode">Points</label>
+			<input type="radio" id="boundsMode" name="mode" onclick="init();" /><label for="boundsMode">Bounds</label>
+		</div>
 		</div>
 	</div>
 	<div id="footer">
